# todo-rs-ts

./: .env.example  .gitignore  .vercelignore  AGENTS.md  Cargo.toml  README.md  build.sh  passwd  vercel.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.sqlx/: query-134b57ac0a75852c53555a9c15976da77a8db166660f8bc6bd78d51fa34aab26.json  query-14446baa10c444c2da7d35099fd1044650eda4cf428286994ae3743b61d531f3.json  query-1e59eea73662c724027d12532454bb8900580133685077320d08992776c9ecff.json  query-65168be1f809c8399c5b12e337f2e9c7f8e58869b6135cdce2bda82695d6e3ff.json  query-6a4e8d2c97ccebca9af463053f65e16b0308a2475536af85e633a6bf7ee8b0cb.json  query-7a194ad1b2994a0651e7d2b63d86cf080b5e2a3203236ca5f523141b4ea6064c.json  query-a69b7df0266ca38ea0d6cbdce8a75e4dca6ea05b8f9f24a92ebf5daf03d34310.json  query-b9ce71967f2c7d4eb06cb845466eebbcf578c64fec3a845bfc2d78285d8d2a72.json  query-e778674eeda8fb69fa9e7097e18d504d7f2c3a6f648e1bf9df1eead4f983833c.json  query-f166ba42a3fbac33c2538a8a6c94536e022794acbb76882de8ccc8d36835f386.json  query-f5e27e53ea6c80b4e4a2e6230731d23fe2c25651d8766e68e9d0b58254f474e2.json  query-ff9119fe8e8de3bf99c315a47d2a56d47221db59ec06bfe0071a2670a90a69e7.json
api/: handler.rs
docs/: query-layer-duplication-rationale.md  unwrap-and-panic-safety.md
e2e/: playwright.config.ts
migrations/: V1__todos.sql
scripts/: check-types.sh  devcontainer-new.sh  generate-types.sh  setup-db.sh  worktree-ls.sh  worktree-new.sh  worktree-rm.sh
src/: error.rs  handlers.rs  lib.rs  main.rs  models.rs  queries.rs
tests/: error.rs  handlers.rs  (+3 more)
(+24 files in other folders)
