[package]
name = "todo-rs-ts"
version = "0.1.0"
edition = "2021"

[lib]
name = "todo_rs_ts"
path = "src/lib.rs"

[[bin]]
name = "todo-api"
path = "src/main.rs"

[[bin]]
name = "todo-migrate"
path = "src/bin/migrate.rs"
required-features = ["postgres"]

[[bin]]
name = "handler"
path = "api/handler.rs"
required-features = ["vercel"]

[features]
default = ["vercel"]
postgres = ["sqlx/postgres", "sqlx/uuid", "sqlx/chrono"]
sqlite = ["sqlx/sqlite"]
vercel = ["dep:vercel_runtime", "dep:tower", "sqlite"]
test-helpers = []

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "migrate", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
typeshare = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
vercel_runtime = { version = "2", features = ["axum"], optional = true }
tower = { version = "0.5", optional = true }
